Document how the application classloader's classpath is read
enableClasspath() reads the application classloader's classpath entries
from its private jdk.internal.loader.URLClassPath ucp field where that is
possible, and from the java.class.path system property otherwise, since
the JPMS builtin classloaders expose the locations they load from through
no public API.

Say so in the javadoc of both ClassGraph#enableClasspath() and
ClasspathFinder#enableClasspath(), along with the two kinds of classpath
entry that are missed when the ucp field cannot be read: a Java agent's
jars appended with Instrumentation.appendToSystemClassLoaderSearch(),
which is specified not to update java.class.path, and the entries
appended to the boot classpath with -Xbootclasspath/a or with an agent
manifest's Boot-Class-Path attribute.